Enabling image and file upload
